--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/housecricket/lDate#readme",
   "dependencies": {
-    "@junryo/astrology-utils": "file:../astrology-utils"
+    "@junryo/astrology-utils": "file:junryo-astrology-utils-0.0.1.tgz"
   }
 }
